--- a/Aziz&Ani.html
+++ b/Aziz&Ani.html
@@ -1857,11 +1857,11 @@ var context = new AudioContext();
                    <div id="fun-div-id57"  data-aos="zoom-in-up">
                     <img id="fun-img-id7" style="width: 60%; border-radius: 15px; border: 3px solid #aa92dd;" loading="lazy" src="https://indoinvite.com/nikah/upload/57718/1683127253foto_berdua.jpeg" alt="">
                     <br>
-                    <p class="hide-ucapan" id="fun-last_kata">Merupakan suatu kebahagiaan dan kehormatan bagi kami, apabila Bapak/Ibu/Saudara/i, berkenan hadir di acara kami</p>
+                    <p class="hide-ucapan" id="fun-last_kata">Bingung membuat surat undangan? Kami ada solusinya. Viral surat undangan digital website dengan banyak pilihan tema menarik dimulai dari harga Rp.80.000 saja</p>
                     <br>
 
                     <br>
-                    <p>- Terimakasih -</p>
+                    <p>- contack insta @zizbstomi -</p>
 
 
                     <br>
